--- a/work/2408_permission_guide/html/guide/guideGift.html
+++ b/work/2408_permission_guide/html/guide/guideGift.html
@@ -9,15 +9,15 @@
     <meta name="keywords" content="MOBON" />
     <meta name="author" content="인라이플" />
     <title>포미션</title>
-    <link type="image/ico" rel="shortcut icon" href="../image/favicon/favicon.ico">
-    <link type="text/css" rel="stylesheet" href="../css/common.css">
+    <link type="image/ico" rel="shortcut icon" href="../../image/favicon/favicon.ico">
+    <link type="text/css" rel="stylesheet" href="../../css/common.css">
 </head>
 
 <body>
     <!-- 미션 참여 -->
-    <!-- pm_guidePlace 클래스는 해당 페이지를 구분하는 id 값으로 사용하는 클래스입니다. 
+    <!-- pm_guideGift 클래스는 해당 페이지를 구분하는 id 값으로 사용하는 클래스입니다. 
      다른 페이지에는 사용을 지양해주시기 바랍니다.(추후 유지보수때 css 수정 어려움) -->
-    <div class="wrap pm_guidePlace">
+    <div class="wrap pm_guideGift">
         <section class="contents">
             <div class="title">
                 <p>미션 참여하고<br> 포인트 받기</p>
@@ -25,29 +25,41 @@
             <div class="content">
                 <section class="sec_guide">
                     <div class="tit">
-                        <p>서울특별시청</p>
-                        <p>네이버 플레이스 검색 후 저장하기</p>
+                        <p>국민알뜰폰</p>
+                        <p>네이버 쇼핑 상품 검색 후 정답 확인</p>
                     </div>
                     <div class="cont">
                         <ul>
-                            <li>플레이스 검색 후 저장
+                            <li>쇼핑 검색 후 상품 클릭 </li>
+                            <li>해당 판매처를 찾아서 클릭
                                 <!-- 이미지 추가 -->
                                 <!-- border 없어도 되는 경우 brdNone 클래스 추가-->
                                 <!-- <div class="prodDetail brdNone"> -->
                                 <div class="prodDetail">
-                                    <img src="../image/example/img_ex3.png" alt="">
+                                    <img src="../../image/example/img_ex11.jpg" alt="">
                                 </div>
                             </li>
-                            <li>저장화면 캡처</li>
-                            <li>캡처이미지 업로드</li>
+                            <li>질문 및 정답확인</li>
+                            <li>정답입력</li>
                             <li>리워드 지급</li>
                         </ul>
+                        <div class="guide">
+                            <p>업체명: 국민알뜰폰</p>
+                            <p>상품명 : SK,LG,KT 삼성 갤럭시 S24</p>
+                            <p>울트라 미개봉 새상품 5G</p>
+                            <p>데이터 무제한 신입생 입학선물</p>
+                            <p>상품번호를 복사하여 입력해주세요.</p>
+                        </div>
                         <div class="alarm">
                             <p><span>30초 동안</span> 구경해야 포인트가 지급됩니다.</p>
+                            <p class="ftColor1">'주의' 광고클릭시 포인트회수 처리</p>
                         </div>
                         <div class="btnArea">
                             <button type="button" class="copy">검색어 복사</button>
                             <button type="button" class="move">미션하러 가기</button>
+                        </div>
+                        <div class="alarm2">
+                            <p>네이버앱을 꼭 설치해주셔야 참여가능합니다.</p>
                         </div>
                     </div>
                 </section>
@@ -60,20 +72,19 @@
                             <li>
                                 <p>검색어를 복사해주세요.</p>
                                 <p>(복사 안될 시 아래 텍스트 복사)</p>
-                                <p>서울특별시청</p>
+                                <p>삼성 갤럭시 S24</p>
                             </li>
                             <li>
                                 <p>복사한 검색어를 네이버 검색창에 <br>입력하고 검색하기</p>
                             </li>
                             <li>
-                                <p>검색어와 동일한 플레이스 클릭</p>
-                                <p>또는</p>
+                                <p>쇼핑 더보기 클릭 상품 찾아서 클릭 후<br> 30초 동안 둘러보면서 정답 찾기</p>
                             </li>
                             <li>
-                                <p>저장 후 캡처 찍기</p>
-                                <p>AI 이미지분석으로 실시간 확인 후 적립됩니다.</p>
-                                <p>업체 클릭 후 <span>저장, 기본폰트</span> 사용<br><span>저장버튼이 활성화</span>상태를 캡처하기 <br><span>다크모드
-                                        해제</span>후 캡처하기</p>
+                                <p>상품 찾아서 클릭</p>
+                            </li>
+                            <li>
+                                <p>30초 동안 둘러보면서 정답 찾기</p>
                             </li>
                         </ul>
                     </div>
@@ -83,10 +94,14 @@
         <!--// contnets end -->
         <footer>
             <div class="guide">
-                <p>* 저장 후 30일을 유지하지 않고 취소하면 서비스 이용에 제한이 있습니다. </p>
+                <!-- <p>* 저장 후 30일을 유지하지 않고 취소하면 서비스 이용에 제한이 있습니다. </p> -->
+                <p>※ 정답 공유 시 서비스 이용에 제한이 있습니다.</p>
                 <button type="button" class="report">오류 접수</button>
             </div>
-            <button type="button" class="upload">캡처 이미지 업로드</button>
+            <div class="inputSave">
+                <input type="text" placeholder="질문 확인 후 정답을 입력해 주세요.">
+                <button type="button" class="save">적립받기</button>
+            </div>
         </footer>
         <!--// footer end -->
     </div>
