--- a/work/2408_permission_guide/html/guide/guideGiftNumber.html
+++ b/work/2408_permission_guide/html/guide/guideGiftNumber.html
@@ -9,15 +9,15 @@
     <meta name="keywords" content="MOBON" />
     <meta name="author" content="인라이플" />
     <title>포미션</title>
-    <link type="image/ico" rel="shortcut icon" href="../image/favicon/favicon.ico">
-    <link type="text/css" rel="stylesheet" href="../css/common.css">
+    <link type="image/ico" rel="shortcut icon" href="../../image/favicon/favicon.ico">
+    <link type="text/css" rel="stylesheet" href="../../css/common.css">
 </head>
 
 <body>
     <!-- 미션 참여 -->
-    <!-- pm_guideGift 클래스는 해당 페이지를 구분하는 id 값으로 사용하는 클래스입니다. 
+    <!-- pm_guideGiftNumber 클래스는 해당 페이지를 구분하는 id 값으로 사용하는 클래스입니다. 
      다른 페이지에는 사용을 지양해주시기 바랍니다.(추후 유지보수때 css 수정 어려움) -->
-    <div class="wrap pm_guideGift">
+    <div class="wrap pm_guideGiftNumber">
         <section class="contents">
             <div class="title">
                 <p>미션 참여하고<br> 포인트 받기</p>
@@ -30,18 +30,25 @@
                     </div>
                     <div class="cont">
                         <ul>
-                            <li>쇼핑 검색 후 상품 클릭 </li>
-                            <li>해당 판매처를 찾아서 클릭
+                            <li> 쇼핑 검색 후 상품 클릭
+                                <!-- 이미지 추가 -->
+                                <!-- border 없어도 되는 경우 brdNone 클래스 추가-->
+                                <!-- <div class="prodDetail brdNone"> -->
+                                <div class="prodDetail brdNone">
+                                    <img src="../../image/example/img_ex3.png" alt="">
+                                </div>
+                            </li>
+                            <li> 해당 판매처를 찾아서 클릭
                                 <!-- 이미지 추가 -->
                                 <!-- border 없어도 되는 경우 brdNone 클래스 추가-->
                                 <!-- <div class="prodDetail brdNone"> -->
                                 <div class="prodDetail">
-                                    <img src="../image/example/img_ex11.jpg" alt="">
+                                    <img src="../../image/example/img_ex11.jpg" alt="">
                                 </div>
                             </li>
-                            <li>질문 및 정답확인</li>
-                            <li>정답입력</li>
-                            <li>리워드 지급</li>
+                            <li> 질문 및 정답확인 </li>
+                            <li> 정답입력 </li>
+                            <li> 리워드 지급 </li>
                         </ul>
                         <div class="guide">
                             <p>업체명: 국민알뜰폰</p>
@@ -82,6 +89,9 @@
                             <li>
                                 <p>30초 동안 둘러보면서 정답 찾기</p>
                             </li>
+                            <li>
+                                <p>정답 힌트</p>
+                            </li>
                         </ul>
                     </div>
                 </section>
@@ -90,11 +100,11 @@
         <!--// contnets end -->
         <footer>
             <div class="guide">
-                <p>* 저장 후 30일을 유지하지 않고 취소하면 서비스 이용에 제한이 있습니다. </p>
-                <button type="button" class="report">오류 접수</button>
+                <!-- <p>* 저장 취소 시 서비스 이용에 제한이 있습니다.</p> -->
+                <p>* 정답 공유 시 서비스 이용에 제한이 있습니다.</p> <button type="button" class="report">오류 접수</button>
             </div>
             <div class="inputSave">
-                <input type="text" placeholder="질문 확인 후 정답을 입력해 주세요.">
+                <input type="text" placeholder="상품번호 앞 6자리를 입력해주세요">
                 <button type="button" class="save">적립받기</button>
             </div>
         </footer>
