--- a/work/2408_permission_guide/html/guide/guidePlace.html
+++ b/work/2408_permission_guide/html/guide/guidePlace.html
@@ -9,36 +9,36 @@
     <meta name="keywords" content="MOBON" />
     <meta name="author" content="인라이플" />
     <title>포미션</title>
-    <link type="image/ico" rel="shortcut icon" href="../image/favicon/favicon.ico">
-    <link type="text/css" rel="stylesheet" href="../css/common.css">
+    <link type="image/ico" rel="shortcut icon" href="../../image/favicon/favicon.ico">
+    <link type="text/css" rel="stylesheet" href="../../css/common.css">
 </head>
 
 <body>
-    <!-- 리워드 받기 (배민) -->
-    <!-- pm_guideRewardBM 클래스는 해당 페이지를 구분하는 id 값으로 사용하는 클래스입니다. 
+    <!-- 미션 참여 -->
+    <!-- pm_guidePlace 클래스는 해당 페이지를 구분하는 id 값으로 사용하는 클래스입니다. 
      다른 페이지에는 사용을 지양해주시기 바랍니다.(추후 유지보수때 css 수정 어려움) -->
-    <div class="wrap pm_guideRewardBM">
+    <div class="wrap pm_guidePlace">
         <section class="contents">
             <div class="title">
-                <p>미션 참여하고<br> 리워드 받기</p>
+                <p>미션 참여하고<br> 포인트 받기</p>
             </div>
             <div class="content">
                 <section class="sec_guide">
                     <div class="tit">
-                        <p>베스트 초이스 핫도그</p>
-                        <p>배달의민족 검색 후 찜하기</p>
+                        <p>서울특별시청</p>
+                        <p>네이버 플레이스 검색 후 저장하기</p>
                     </div>
                     <div class="cont">
                         <ul>
-                            <li>매장 찜하기
+                            <li>플레이스 검색 후 저장
                                 <!-- 이미지 추가 -->
                                 <!-- border 없어도 되는 경우 brdNone 클래스 추가-->
                                 <!-- <div class="prodDetail brdNone"> -->
-                                <!-- <div class="prodDetail">
-                                    <img src="../image/example/img_ex3.png" alt="">
-                                </div> -->
+                                <div class="prodDetail">
+                                    <img src="../../image/example/img_ex3.png" alt="">
+                                </div>
                             </li>
-                            <li>찜 화면 캡처</li>
+                            <li>저장화면 캡처</li>
                             <li>캡처이미지 업로드</li>
                             <li>리워드 지급</li>
                         </ul>
@@ -58,20 +58,22 @@
                     <div class="cont">
                         <ul>
                             <li>
-                                <p>미션하러 가기 버튼 클릭 후 매장 검색</p>
+                                <p>검색어를 복사해주세요.</p>
+                                <p>(복사 안될 시 아래 텍스트 복사)</p>
+                                <p>서울특별시청</p>
                             </li>
                             <li>
-                                <p>매장 찜하고 화면 캡처하기</p>
+                                <p>복사한 검색어를 네이버 검색창에 <br>입력하고 검색하기</p>
+                            </li>
+                            <li>
+                                <p>검색어와 동일한 플레이스 클릭</p>
+                                <p>또는</p>
+                            </li>
+                            <li>
+                                <p>저장 후 캡처 찍기</p>
                                 <p>AI 이미지분석으로 실시간 확인 후 적립됩니다.</p>
-                                <div class="noti">
-                                    <p>[캡처 주의사항]</p>
-                                    <p>핸드폰 <span>기본폰트</span> 사용하기</p>
-                                    <p><span>찜버튼이 활성화 상태</span>를 캡처하기</p>
-                                    <p><span>다크모드 해제</span> 후 캡처하기</p>
-                                </div>
-                                <p>찜하기방법1</p>
-                                <p>찜하기방법2</p>
-                                <p>찜하기방법3</p>
+                                <p>업체 클릭 후 <span>저장, 기본폰트</span> 사용<br><span>저장버튼이 활성화</span>상태를 캡처하기 <br><span>다크모드
+                                        해제</span>후 캡처하기</p>
                             </li>
                         </ul>
                     </div>
@@ -81,7 +83,7 @@
         <!--// contnets end -->
         <footer>
             <div class="guide">
-                <p>* 찜하기 후 30일을 유지해 주세요<br> 취소 시 서비스 이용에 제한이 있습니다. </p>
+                <p>* 저장 후 30일을 유지하지 않고 취소하면 서비스 이용에 제한이 있습니다. </p>
                 <button type="button" class="report">오류 접수</button>
             </div>
             <button type="button" class="upload">캡처 이미지 업로드</button>
