--- a/work/2408_permission_guide/html/guide/guideRewardBM.html
+++ b/work/2408_permission_guide/html/guide/guideRewardBM.html
@@ -9,15 +9,15 @@
     <meta name="keywords" content="MOBON" />
     <meta name="author" content="인라이플" />
     <title>포미션</title>
-    <link type="image/ico" rel="shortcut icon" href="../image/favicon/favicon.ico">
-    <link type="text/css" rel="stylesheet" href="../css/common.css">
+    <link type="image/ico" rel="shortcut icon" href="../../image/favicon/favicon.ico">
+    <link type="text/css" rel="stylesheet" href="../../css/common.css">
 </head>
 
 <body>
-    <!-- 리워드 받기 (쿠팡이츠)  -->
-    <!-- pm_guideRewardCE 클래스는 해당 페이지를 구분하는 id 값으로 사용하는 클래스입니다. 
+    <!-- 리워드 받기 (배민) -->
+    <!-- pm_guideRewardBM 클래스는 해당 페이지를 구분하는 id 값으로 사용하는 클래스입니다. 
      다른 페이지에는 사용을 지양해주시기 바랍니다.(추후 유지보수때 css 수정 어려움) -->
-    <div class="wrap pm_guideRewardCE">
+    <div class="wrap pm_guideRewardBM">
         <section class="contents">
             <div class="title">
                 <p>미션 참여하고<br> 리워드 받기</p>
@@ -26,7 +26,7 @@
                 <section class="sec_guide">
                     <div class="tit">
                         <p>베스트 초이스 핫도그</p>
-                        <p>쿠팡이츠 검색 후 찜하기</p>
+                        <p>배달의민족 검색 후 찜하기</p>
                     </div>
                     <div class="cont">
                         <ul>
@@ -35,7 +35,7 @@
                                 <!-- border 없어도 되는 경우 brdNone 클래스 추가-->
                                 <!-- <div class="prodDetail brdNone"> -->
                                 <!-- <div class="prodDetail">
-                                    <img src="../image/example/img_ex3.png" alt="">
+                                    <img src="../../image/example/img_ex3.png" alt="">
                                 </div> -->
                             </li>
                             <li>찜 화면 캡처</li>
@@ -61,7 +61,7 @@
                                 <p>미션하러 가기 버튼 클릭 후 매장 검색</p>
                             </li>
                             <li>
-                                <p>매장 즐겨찾기 하고 화면 캡처하기</p>
+                                <p>매장 찜하고 화면 캡처하기</p>
                                 <p>AI 이미지분석으로 실시간 확인 후 적립됩니다.</p>
                                 <div class="noti">
                                     <p>[캡처 주의사항]</p>
@@ -70,6 +70,8 @@
                                     <p><span>다크모드 해제</span> 후 캡처하기</p>
                                 </div>
                                 <p>찜하기방법1</p>
+                                <p>찜하기방법2</p>
+                                <p>찜하기방법3</p>
                             </li>
                         </ul>
                     </div>
@@ -79,7 +81,7 @@
         <!--// contnets end -->
         <footer>
             <div class="guide">
-                <p>* 즐겨찾기 후 30일을 유지해 주세요<br> 취소 시 서비스 이용에 제한이 있습니다. </p>
+                <p>* 찜하기 후 30일을 유지해 주세요<br> 취소 시 서비스 이용에 제한이 있습니다. </p>
                 <button type="button" class="report">오류 접수</button>
             </div>
             <button type="button" class="upload">캡처 이미지 업로드</button>
