--- a/work/2408_permission_guide/html/guide/guideRewardCE.html
+++ b/work/2408_permission_guide/html/guide/guideRewardCE.html
@@ -9,43 +9,39 @@
     <meta name="keywords" content="MOBON" />
     <meta name="author" content="인라이플" />
     <title>포미션</title>
-    <link type="image/ico" rel="shortcut icon" href="../image/favicon/favicon.ico">
-    <link type="text/css" rel="stylesheet" href="../css/common.css">
+    <link type="image/ico" rel="shortcut icon" href="../../image/favicon/favicon.ico">
+    <link type="text/css" rel="stylesheet" href="../../css/common.css">
 </head>
 
 <body>
-    <!-- 미션 참여 -->
-    <!-- pm_guideQuiz 클래스는 해당 페이지를 구분하는 id 값으로 사용하는 클래스입니다. 
+    <!-- 리워드 받기 (쿠팡이츠)  -->
+    <!-- pm_guideRewardCE 클래스는 해당 페이지를 구분하는 id 값으로 사용하는 클래스입니다. 
      다른 페이지에는 사용을 지양해주시기 바랍니다.(추후 유지보수때 css 수정 어려움) -->
-    <div class="wrap pm_guideQuiz">
+    <div class="wrap pm_guideRewardCE">
         <section class="contents">
             <div class="title">
-                <p>미션 참여하고<br> 포인트 받기</p>
+                <p>미션 참여하고<br> 리워드 받기</p>
             </div>
             <div class="content">
                 <section class="sec_guide">
                     <div class="tit">
-                        <p>서울특별시청</p>
-                        <p>네이버 플레이스 검색 후 저장하기</p>
+                        <p>베스트 초이스 핫도그</p>
+                        <p>쿠팡이츠 검색 후 찜하기</p>
                     </div>
                     <div class="cont">
                         <ul>
-                            <li>플레이스 검색 후 클릭
+                            <li>매장 찜하기
                                 <!-- 이미지 추가 -->
                                 <!-- border 없어도 되는 경우 brdNone 클래스 추가-->
                                 <!-- <div class="prodDetail brdNone"> -->
-                                <div class="prodDetail">
-                                    <img src="../image/example/img_ex3.png" alt="">
-                                </div>
+                                <!-- <div class="prodDetail">
+                                    <img src="../../image/example/img_ex3.png" alt="">
+                                </div> -->
                             </li>
-                            <li>질문 및 정답확인</li>
-                            <li>정답입력</li>
+                            <li>찜 화면 캡처</li>
+                            <li>캡처이미지 업로드</li>
                             <li>리워드 지급</li>
                         </ul>
-                        <div class="guide">
-                            <p>플레이스 방문 후 [주변] 탭으로 이동하여 [명소] 탭 클릭 후 [1번째]를 입력해주세요.</p>
-                            <!-- <p>업체 전화번호를 입력해주세요.</p> -->
-                        </div>
                         <div class="alarm">
                             <p><span>30초 동안</span> 구경해야 포인트가 지급됩니다.</p>
                         </div>
@@ -62,40 +58,31 @@
                     <div class="cont">
                         <ul>
                             <li>
-                                <p>검색어를 복사해주세요.</p>
-                                <p>(복사 안될 시 아래 텍스트 복사)</p>
-                                <p>서울특별시청</p>
+                                <p>미션하러 가기 버튼 클릭 후 매장 검색</p>
                             </li>
                             <li>
-                                <p>복사한 검색어를 네이버 검색창에 <br>입력하고 검색하기</p>
-                            </li>
-                            <li>
-                                <p>검색어와 동일한 플레이스 클릭</p>
-                                <p>또는</p>
-                            </li>
-                            <li>
-                                <p>질문 확인 후 정답 찾기</p>
+                                <p>매장 즐겨찾기 하고 화면 캡처하기</p>
+                                <p>AI 이미지분석으로 실시간 확인 후 적립됩니다.</p>
+                                <div class="noti">
+                                    <p>[캡처 주의사항]</p>
+                                    <p>핸드폰 <span>기본폰트</span> 사용하기</p>
+                                    <p><span>찜버튼이 활성화 상태</span>를 캡처하기</p>
+                                    <p><span>다크모드 해제</span> 후 캡처하기</p>
+                                </div>
+                                <p>찜하기방법1</p>
                             </li>
                         </ul>
                     </div>
-                </section>
-                <section class="sec_report">
-                    <p>미션 참여가 어려우신가요?</p>
-                    <a href="#">신고하기</a>
                 </section>
             </div>
         </section>
         <!--// contnets end -->
         <footer>
             <div class="guide">
-                <p>* 저장 취소 시 서비스 이용에 제한이 있습니다.</p>
-                <!-- <p>정답 공유 시 서비스 이용에 제한이 있습니다.</p> -->
+                <p>* 즐겨찾기 후 30일을 유지해 주세요<br> 취소 시 서비스 이용에 제한이 있습니다. </p>
                 <button type="button" class="report">오류 접수</button>
             </div>
-            <div class="inputSave">
-                <input type="text" placeholder="질문 확인 후 정답을 입력해 주세요.">
-                <button type="button" class="save">적립받기</button>
-            </div>
+            <button type="button" class="upload">캡처 이미지 업로드</button>
         </footer>
         <!--// footer end -->
     </div>
